--- a/OGDevs-CoConsult-/pom.xml
+++ b/OGDevs-CoConsult-/pom.xml
@@ -52,18 +52,10 @@
                 <artifactId>spring-boot-starter-security</artifactId>
             </dependency>
 
-
             <dependency>
                 <groupId>org.springdoc</groupId>
                 <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
                 <version>2.1.0</version>
-            </dependency>
-
-
-            <dependency>
-                <groupId>org.postgresql</groupId>
-                <artifactId>postgresql</artifactId>
-                <scope>runtime</scope>
             </dependency>
             <dependency>
                 <groupId>org.projectlombok</groupId>
@@ -74,6 +66,11 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-test</artifactId>
                 <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>com.mysql</groupId>
+                <artifactId>mysql-connector-j</artifactId>
+                <scope>runtime</scope>
             </dependency>
         </dependencies>
 
