--- a/OGDevs-CoConsult-/pom.xml
+++ b/OGDevs-CoConsult-/pom.xml
@@ -68,10 +68,11 @@
                 <scope>test</scope>
             </dependency>
             <dependency>
-                <groupId>com.mysql</groupId>
-                <artifactId>mysql-connector-j</artifactId>
+                <groupId>org.postgresql</groupId>
+                <artifactId>postgresql</artifactId>
                 <scope>runtime</scope>
             </dependency>
+
         </dependencies>
 
         <build>
