--- a/sing-app-angular-master/sing-app-angular-master/package.json
+++ b/sing-app-angular-master/sing-app-angular-master/package.json
@@ -56,6 +56,7 @@
     "jquery-ui": "https://github.com/jquery/jquery-ui.git#1.11.4",
     "jquery.animate-number": "0.0.14",
     "jvectormap": "2.0.4",
+    "keycloak-angular": "^19.0.2",
     "keycloak-js": "^26.1.2",
     "line-awesome": "icons8/line-awesome",
     "lodash.isequal": "^4.5.0",
